<resources>
    <string name="app_name">GPS Pilot</string>
    <string name="error_occurred">Error occurred</string>
    <string name="can_not_parse_route">Can\'t parse route</string>
    <string name="location_permission_denied">Location permission denied</string>
    <string name="speed">Speed</string>
    <string name="average">Average:</string>
    <string name="current">Current:</string>
    <string name="kmPerHour">km/h</string>
    <string name="km">%1$d km</string>
    <string name="external_storage_unavailable">Can\'t save file, because external storage is unavailable</string>
    <string name="error_occurred_during_file_saving">Error occurred during file saving</string>
    <string name="no_routes">No routes</string>
    <string name="time_template">%d h %d min</string>
    <string name="km_template">%.1f km</string>
    <string name="remaining">Remaining:</string>
    <string name="arriving">Arriving:</string>
    <string name="distance">Distance:</string>
    <string name="show_entire_track">Show entire track</string>
    <string name="created">Created</string>
    <string name="length">Length</string>
    <string name="name">Name</string>
</resources>
